Bug 407488 - 0 B shown as an image size + no resolution info
Summary: 0 B shown as an image size + no resolution info
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-13 11:09 UTC by Tiar
Modified: 2019-05-13 15:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
0B on the widget label (3.68 KB, image/png)
2019-05-13 11:09 UTC, Tiar
Details
Tooltip of the widget (25.14 KB, image/png)
2019-05-13 11:10 UTC, Tiar
Details
Full screen screenshot (536.92 KB, image/png)
2019-05-13 13:08 UTC, Tiar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2019-05-13 11:09:38 UTC
Created attachment 120037 [details]
0B on the widget label

SUMMARY
Sometimes the widget at the bottom forgets about the resolution of the image opened and the image size (how much this specific document takes).


STEPS TO REPRODUCE
1. Paint a lot.
2. Save a few times.
3. Observe the widget.

OBSERVED RESULT
0 B on the widget label, tooltip also reports 0B for everything in the first section.


EXPECTED RESULT
Correct resolution and the memory amount used for the image.


ADDITIONAL INFORMATION
It looks like it might be related to saving, but I'm not sure. It does happen consistently, but I can't say for sure when.


SOFTWARE/OS VERSIONS
Windows: 10
Krita Version: 4.2.0-pre-alpha (git 199cd9f)
Comment 1 Tiar 2019-05-13 11:10:19 UTC
Created attachment 120038 [details]
Tooltip of the widget
Comment 2 Halla Rempt 2019-05-13 11:18:00 UTC
When did that break...
Comment 3 Halla Rempt 2019-05-13 11:39:22 UTC
Known good: 342b87f3a50947e0f90cb822c40b7e0dfc966cc2, May 1st. It looks like a signal/slot connection got broken somewhere.
Comment 4 Halla Rempt 2019-05-13 11:55:49 UTC
The 4.2.0 alpha works fine.
Comment 5 Halla Rempt 2019-05-13 11:57:45 UTC
Actually, master works fine as well for me...
Comment 6 Tiar 2019-05-13 13:08:54 UTC
Created attachment 120041 [details]
Full screen screenshot
Comment 7 Dmitry Kazakov 2019-05-13 15:11:02 UTC
Git commit 847c1b2ac0851c8b9c5cd625f01dd09671850af5 by Dmitry Kazakov.
Committed on 13/05/2019 at 15:10.
Pushed by dkazakov into branch 'master'.

Fix updating memory report when closing "other" tab

When a view is closed, we should ensure status bar doesn't have
a link to it. That is okay, but we shouldn't do it manually.
Keeping status bar's links is done by KisViewManager, so let just
him do his work.

M  +5    -0    libs/ui/KisMainWindow.cpp
M  +0    -1    libs/ui/KisView.cpp

https://invent.kde.org/kde/krita/commit/847c1b2ac0851c8b9c5cd625f01dd09671850af5