Fix updating memory report when closing "other" tab

When a view is closed, we should ensure status bar doesn't have
a link to it. That is okay, but we shouldn't do it manually.
Keeping status bar's links is done by KisViewManager, so let just
him do his work.

BUG:407488